2008-10-20  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: bump to 2.25.1

2008-10-20  Jonh Wendell <jwendell@gnome.org>

	* Lots of files: Added an 'original size' option in the menu.
	Closes #509948.

2008-10-04  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-bookmarks.c (vinagre_bookmarks_init):
	Create the parent directory before copying the old bookmarks file
	to the new location. Closes #554995.

2008-09-22  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.24.1

==================== 2.24.0 ======================

2008-09-08  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.24.0

==================== 2.23.92 =====================

2008-09-08  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c: Fixed bug #533282 - Support for downscaling.

2008-09-08  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: bump gtk-vnc dependency to 0.3.7
	* src/vinagre-tab.c: Removed ugly hacks related to key press. New
	gtk-vnc handles this correctly.

2008-09-01  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.23.92

==================== 2.23.91 =====================

2008-08-22  Halton Huo <halton.huo@sun.com>

	* configure.ac: Add libsocket to LDFLAGS, closes #548585

2008-08-18  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.23.91

==================== 2.23.90 =====================

2008-08-18  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: Requires gtk+ >= 2.13.1, glib >= 2.17.0
	* src/vinagre-utils.c: Uses new gtk+ functions instead of gnome-open.
	Closes #514064.

2008-07-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	Bug 544736 – Use single GTK+ includes

	* src/gossip-cell-renderer-expander.c:
	* src/gossip-cell-renderer-expander.h:
	* src/vinagre-app.c:
	* src/vinagre-app.h:
	* src/vinagre-applet.c:
	* src/vinagre-bacon.c:
	* src/vinagre-bacon.h:
	* src/vinagre-bookmarks.c:
	* src/vinagre-bookmarks.h:
	* src/vinagre-commands.c: