@@ -1,3 +1,9 @@
+2008-11-11  Jonh Wendell <jwendell@gnome.org>
+
+	* lots of files: Make avahi optional by adding an option to
+	configure script: --disable-avahi. It's enabled by default.
+	Closes #557740.
+
 2008-10-20  Jonh Wendell <jwendell@gnome.org>
 
 	* configure.ac: bump to 2.25.1
